language/move-lang/tests/move_check/parser/friend_decl_address_only.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/friend_decl_address_only.move:3:16
  │
3 │     friend 0x42;
  │            ----^ Unexpected ';'
  │            │    
  │            Expected '::' after an address in a module access chain

